--- a/index.html
+++ b/index.html
@@ -235,7 +235,19 @@
         })();
     </script>
 
-
+  
+    <script>
+        if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/offline.js')
+            .then(function(registration) {
+            console.log('Service Worker registered with scope:', registration.scope);
+            })
+            .catch(function(error) {
+            console.error('Service Worker registration failed:', error);
+            });
+        }
+    </script>
+    
 
 
 </body>
