--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
     <meta name="x5-page-mode" content="app">
     <link rel="stylesheet" type="text/css" href="style-mobile.css" />
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JLV06XCND"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JLV06XCND');
+</script>
+
 </head>
 
 <body style="margin: 0; background: #ddd;" align="center">
